Deep RL section done

--- a/deepRL.tex
+++ b/deepRL.tex
@@ -92,24 +92,14 @@ We've tried several tricks and fine tuning for DRQN. For example, for offline tr
 
 The breakthrough finding came when we modify the algorithm to online (which is only possible for simulation since we need the ground truth simulator) it can perform on par with the optimal policy. When we do greedy search, it converges fast (because we have a lot of near-optimal sequences), while when we do completely random search, the performance drops after a short boost (just like the offline performance), then come back to the optimal performance eventually, which could be mainly due to the massive (around $10^5$ episodes) random dataset (in which there are enough good/near-optimal examples) that has already added in the pool. Greedy search is basically changing the training dataset, so we can easily accept the fact that it’s way better.
 
-The current drawback of DRQN is clear: unable to do exploration, thus require a massive amount ($10^5$ episodes) of random data to see enough near-optimal trajectories. On the contrary, DKT can easily pick up a vague prerequisite structure even under a small dataset (100 episodes), by observing that some skills are easier to learn in the begining while others are not. Based on this little knowledge, the expectimax can get us an optimal policy. In this current setting, model-based method seems to win on planning performance (especially when model-free method is not that sample efficient as we thought it should be).
+The current drawback of offline DRQN is clear: unable to do exploration, thus require a massive amount ($10^5$ episodes) of random data to see enough near-optimal trajectories. On the contrary, DKT can easily pick up a vague prerequisite structure even under a small dataset (100 episodes), by observing that some skills are easier to learn in the begining while others are not. Based on this little knowledge, the expectimax can get us an optimal policy. In this current setting, model-based method seems to win on planning performance (especially when model-free method is not that sample efficient as we thought it should be).
 
 \subsection{Future Work}
 
-There are several concerns on the current experimant setting. We only has 20 trials for each episode, i.e. our horizon is fairly short. A method as shallow as DKT-expectimax (5 steps look ahead) can perform as near-perfect because we can only expect the students to learn those skills without prerequisites. If we have a setting where a shallow sight might be catastrphic (like a 
-longer horizon and a more complicated skill structure), we might see DRQN to win, since it can look infinite steps.
+Experimantal results so far have shown that deep batch Q-learning possibly couldn't work due to the inability of doing exploration in the environment. It turns out that the generalization ability of deep neural network is not that powerful as we expected. However, we are still trying to fine tune the DRQN to see if its performance could go up. A more promising direction is to integrate return based off-policy RL algorithms \footnote{\textit{Safe and Efficient Off-Policy Reinforcement Learning}, Remi Munos, Tom Stepleton, Anna Harutyunyan, Marc G. Bellemare, 2016.} into deep RL. This has not been done by any previous work before thus we might be on to something really innovative.
 
-[** Here are more thoughts on multi-skill exercises. It matters in accounting rewards during training. Should we giving multi-skill questions during planning as well? What kind of combination of skills should we give? Is there a way to decide what is a "powerful" skill-combo? **]
+There are several concerns on the current experiment setting on simulation though. We only have 20 trials for each episode, i.e. our horizon is fairly short. A method as shallow as DKT-expectimax (5 steps look ahead) can perform as near-perfect because we can only expect the students to learn those skills without prerequisites. If we have a setting where a shallow sight might be catastrphic (like a longer horizon and a more complicated skill structure, with loose prerequisite relations as in the real world), we might see DRQN to win, since it can look infinite steps. However, none of these could account for the low performance of DRQN on the simpler simulation data (it should be able to get the optimal policy).
 
-There is a very important thing to keep in mind: if all skills are independant, we don’t need to do expectimax, since it doesn’t matter what question we give (order doesn’t matter in this case). In another word, the more complicated the relationships between skills are, the more
-22
-steps we should look-ahead in the tree search. Therefore, we probably don’t have to look too far away (a.k.a. having a long horizon) in our simple BKT simulation. We probably need to do more experiments to see if a long horizon can give us a lot of benefits.
-[** Random thoughts: is there a relationship between the optimal length of horizon and complexity of the constraints? By optimal, I mean the length is long enough to capture the constraints, but still short enough to compute quickly. There are two obvious extreme cases: when there is no constraints we don’t need to search at all, and when we can look infinite steps we are guarantteed to get the optimal result no matter how hard it is. **]
-Considering the horizon, we should also consider that the students might dropout so the horizon could be shorter than we searched.
-For the speed problem, since we are still not sure if it’s necessary to have a long horizon, we can put aside the running speed issue a bit. However, the DKT can be accelerated by stacking the actions together and have a huge matrix computation instead of many small ones.
-We should first focus on other more important part of the planning. First, we should be able to keep track to the sequence to allow the computation of model-free rewards (which could have various ways, and will be discussed in the next section). Moreover, we need to print the policy and see if the planning result makes sense (probably we can make a beautiful visualization).
+A minor technical issue we need to point out here. First, currently the model-based method is technically not a real RL algorithm, since the reward model is not learned but directly coded in the tree search algorithm. We can use something like DKT to learn the model, but in this case it would be a regression task rather than a classification one. The fix won't be easy and is not going to help with our main concern (why DRQN is underperforming) either.
 
-
-Real Model Based
-
-Accurate BKT.
+There are more interesting directions that we have in mind, including planning with multi-skill questions and making sense of the necessary horizon length for getting an optimal policy (in extreme cases like all the skills are independent, pick any skill wouldn't make a difference, thus zero horizon is as good as infinite horizon). As for application, we should also account for a certain dropout rate when searching for policy. If a student drops out in the middle, a short horizon might be better, since the long-term benefits we planned for the student might not pay off. These thoughts are even more off-topic, and could be discussed in future projects.
