Adaptive Fraction Section done

--- a/fraction.tex
+++ b/fraction.tex
@@ -1,26 +1,20 @@
 \section{Adaptive Fraction}
 \label{sec:fraction}
 
-Shayan’s project is actually quite like ours, to use old data to evaluate new policy. To test the robustness of the policies, we are aiming to make a matrix of how different student models perform under different policies. Major next steps we are thinking is combine the student and reward model as one (so that we can directly predict the posttest performance given the within- tutor trajectory), and training student models on a subset of students (above or below average students).
+This project, Adaptive Fraction, is led by another graduate student in our group, Shayan Doroudi.
+Our group has some collaboration with an HCI group at CMU, and we run an online intelligent tutor system, Fraction, which tutors grade school level math (on fraction). With this system, we can deploy experiments on real students. However, as we have mentioned before, we want to make sure that our policy would be robust, which means that when we deploy it on our system, we should be sure that the result won’t be worse than what we evaluated in (offline) experiments. 
 
+\subsection{Robust Policy}
 
-As we have discussed, Shayan’s current project adopts different methods to model students, and for each student model, we can have multiple policies (methods to find a policy). That’s why he need me to integrate my DKT student model (and probably expectimax search with DKT as well) into his framework.
-Shayan’s dataset comes from our group’s Fraction online tutor system. The structure is a bit different from Assistments: each problem consists of multiple steps; students will only meet the same problem once, but different problems can share same steps; different steps within the same problem can have different results. Basically, steps are skills. After exercises (a tutor session), the student will do a post test. Post test score is our reward.
-Besides student models, we also use the data to train a reward model. We first feed the tutor session trajectory to a student model, the use the final belief state to do a LASSO regression on post test score, which is our reward model. LASSO regression is linear regression with L1 regu- larization, so it automatically does feature selection for you. The regularization coefficient (the λ before |W|) needs tuning with cross validation. The correlation coefficient, r2, has multiple definitions, while 1 is always the best, and it could be negative (when we are doing a reaaly bad
-26
-regression, and the variance between the truth and prediction is even larger than the variance in the truth itself).
-With our reward model, we can do a better evaluation with our policy and student model. (We can’t use the student model to do post test, since the post test has different problems, thus the student model is not trained on that.)
+There are many methods to model a student's knowledge acquisition process, DKT being one of them. Our assumption is, some of these models (or at least some part of it) is correct, and the result can be partially trusted. However, if we only adopt one student model, we might end up with an overfitted policy on this model, and might have negative consequences on real students.
+Therefore, we need to see what the best or worst our policy could do on various student models.
 
+We will have a matrix to show how different policies (which could be built on one of the student models or worlds) can perform on different worlds. DKT could serve as one world, and expectimax is one way to learn a policy on this world. The matrix would have world and policy as its two axes, and performance as its values. We expect to see that the values on diagnal be higher (since diagnal values correspond to the performance of policies tested on the same world that generated the policy in the first place), and hope to find a policy that's good on all world models. Shayan has already implemented a framework of testing policies on different worlds. My job is to port my DKT implementation, and its simulation code into his framework. DKT has a fairly good AUC, 0.81, on the Fraction dataset.
 
 \subsection{Future Work}
-About the expectimax planning, it’s not a direct reuse, since the problem-step relationship is very different in Fraction. In this case, every step will have a result, so the expect node would have $2^{num_steps}$ children. [** Need to check with Emma: for all the steps in a problem, do we treat them as simultaneous ones or consecutive ones? This would change the possibility of each child. **]
-For training we have different dataset (different ways to treat steps actually) to try on:
-• Original step ids (1500 instances) or compressed sensing ones
-• Knowledge components (KC, 105 instances) or other clusters
-• Tutorsessionplusposttestsession.Wewanttousetutorsession’sperformancetodirectly predict the post test results (and see how tutor steps relate to post test steps/problems).
-Basically, we can try with/without KC, with/without post test data. [** details consider post test data training are not clear. **]
 
+It's possible to incorporate expectimax with DKT as a policy as well. However, the Fraction dataset's structure is more complicated than simulation or other real datasets: instead of having a single latent skill, each problem consists of multiple steps; students will only meet the same problem once, but different problems can share same steps; different steps within the same problem can have different results; each step is associated with a skill. Therefore, by taking an action (picking a problem), there are $2^{num\_steps}$ possible outcomes, thus expect node would have more children. And the possibility associated with each max node (as a child of expect node) need to come after a multiple step simulation of DKT. We are not sure if we are going to need DKT-expectimax in the framework though, since it would be prohibitive to even look ahead 3 steps (thus very myopic).
 
-After finishing the DKT simulation code last week, and documenting the DKT training process, currently this project is inactive for me (I was only a sidekick anyway). We are not sure if we are going to need DKT-expectimax, since it would be prohibitive to even look ahead 3 steps (thus very myopic). It would be even more computationally intractable if we are going to do a more accurate simulation, where we treat steps of a probelm as consecutive ones (rather than simultaneous ones).
+In Fraction, after exercises (a tutor session), the student will do a post test. Post test score is our reward. Besides student models, we also use the data to train a reward model. We first feed the tutor session trajectory to a student model, then use the final belief state to do a LASSO regression (linear regression with L1 regularization) on post test score, which gives us the reward model. However, this method gives nearly identical predictions for all policy-world combinations. So one of the major next steps we are thinking is to combine the student and reward model as one (so that we can directly predict the posttest performance given the within-tutor trajectory). This probably would require some tweak to the DKT.
 
-Second, the current BKT inference model didn't fully leverage the prerequisite structure, since it doesn't update the children or ancestor's belief when encountered a skill.
+As an extention to the matrix, we are also planning to train student models on a subset of students (above or below average students). Moreover, my implementation of the loose-prerequisite BKT model (with different sets of parameters for different numbers of mastered prerequisites) could be integreted in the framework as well. The current BKT inference model didn't fully leverage the prerequisite structure, since it doesn't update the children or ancestor's belief when encounters a skill. There are still some math to work out for this upgrade.
